[package]
name = "clementine"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["emu", "ui", "logger", "vecfixed"]

[workspace.package]
readme = "./README.md"
description = "Gameboy Advance emulator."
edition = "2024"
repository = "https://github.com/RIP-Comm/clementine"
license = "MIT"

[workspace.dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.2"

[dependencies]
eframe = { version = "0.30.0", default-features = false, features = ["glow"] }
egui = "0.30.0"
egui_glium = "0.29.0"

emu = { path = "./emu" }
ui = { path = "./ui" }
logger = { path = "./logger" }

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true

[features]
logger = ["logger/logger", "emu/logger"]
disassembler = ["emu/disassembler", "ui/disassembler"]

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
