[package]
name = "clementine"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["emu", "ui"]

[workspace.package]
readme = "./README.md"
description = "Gameboy Advance emulator."
edition = "2024"
repository = "https://github.com/RIP-Comm/clementine"
license = "MIT"

[workspace.dependencies]
# Dev dependencies
pretty_assertions = "1.4.1"
rand = "0.10.0"

# Shared production dependencies
serde = { version = "1.0.228", features = ["derive"] }
eframe = { version = "0.33.3", default-features = false, features = ["glow"] }
egui = { version = "0.33.3", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dependencies]
eframe.workspace = true
egui = { workspace = true, default-features = true }
egui_glium = "0.33.2"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

emu = { path = "./emu" }
ui = { path = "./ui" }

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true

[features]

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
