[package]
name = "emu"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
vecfixed = { path = "../vecfixed" }
rand = { workspace = true, optional = true }
serde.workspace = true
serde_with = "3.4.0"
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true

[features]
disassembler = []

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
