[package]
name = "emu"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true, optional = true }
rtrb = "0.3"
serde.workspace = true
serde_with = "3.4.0"
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true

[features]

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
