[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
logger = { path = "../logger" }
eframe = { version = "0.28.1", default-features = false, features = ["glow"] }
egui = { version = "0.28.1", default-features = false }
egui_extras = { version = "0.26.2", features = ["image"] }
emu = { path = "../emu"}
image = { version = "0.24.7", features = ["png"], optional = true}
native-dialog = "0.7.0"
bincode = "1.3.3"

[features]
disassembler = []

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"