[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
egui_extras = { version = "0.35.0", features = ["image"] }
emu = { path = "../emu" }
bincode = { version = "2.0.0", features = ["serde"] }
rtrb = "0.3"
tracing.workspace = true

[features]

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
